# SurgeDB

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release-cargo.yml  release-npm.yml  release-pypi.yml  release.yml
crates/surgedb-bindings/: Cargo.toml  pyproject.toml
crates/surgedb-bindings/python/: example.py
crates/surgedb-bindings/src/: lib.rs  surgedb.udl
crates/surgedb-cli/: Cargo.toml
crates/surgedb-cli/src/: main.rs
crates/surgedb-core/: Cargo.toml
crates/surgedb-core/src/: db.rs  error.rs  filter.rs  hnsw.rs  lib.rs  mmap_db.rs  persistent.rs  quantized_storage.rs  storage.rs  types.rs
crates/surgedb-server/: Cargo.toml
crates/surgedb-server/src/: main.rs
crates/surgedb-wasm/: Cargo.toml  README.md
crates/surgedb-wasm/src/: lib.rs
crates/zapybase-cli/: Cargo.toml
crates/zapybase-cli/src/: main.rs
crates/zapybase-core/src/: db.rs  hnsw.rs  lib.rs  mmap_db.rs  mmap_storage.rs  persistent.rs  quantized_storage.rs  snapshot.rs  storage.rs
crates/zapybase-server/: Cargo.toml
crates/zapybase-server/src/: main.rs
examples/python/: README.md  filter_heavy.py  mixed_workload.py  search_heavy.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_hnsw.rs  fuzz_insert.rs  fuzz_search.rs
