[package]
name = "surgedb-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI tool for SurgeDB vector database"

[[bin]]
name = "surgedb"
path = "src/main.rs"

[dependencies]
surgedb-core = { path = "../surgedb-core" }
clap.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
rand.workspace = true
rayon = "1.8"
