[package]
name = "zapybase-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI tool for ZappyBase vector database"

[[bin]]
name = "zapybase"
path = "src/main.rs"

[dependencies]
zapybase-core = { path = "../zapybase-core" }
clap.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
rand.workspace = true
rayon = "1.8"
